# eval-sdk-dm816x

./: LICENSE  Makefile  README.md
bootloader/: Config  Makefile
bootloader/u-boot-2010.06/: Config.template  Makefile  arch  mach
bootloader/u-boot-2010.06/copyrights/: copyrights.xml
bootloader/u-boot-2010.06/patches/: arch  mach
bsp/: .release  .updinfo  Config  Makefile  Makefile.extra  arch  autotools.defs  mach
bsp/arch-dm8168/: Config  Kconfig  Make.defs  host.required
bsp/arch-dm8168/apps/: Makefile
bsp/arch-dm8168/u-boot/: Config  Makefile.rules
bsp/bspc/: .tmpconfig.h  Makefile  conf.c  confdata.c  lex.zconf.c  mconf.c  zconf.tab.c  zconf.tab.c_shipped
bsp/bspc/lxdialog/: .checklist.o.cmd  .inputbox.o.cmd  .menubox.o.cmd  .textbox.o.cmd  .util.o.cmd  .yesno.o.cmd
bsp/classes/: _rrsdk.defs  autotools.defs  ccache.defs  cmake.defs  common.defs  dependencies.defs  dvsdk.defs  ezsdk.defs  fetcher.defs  flags.defs  force_build.defs  linuxmodule.defs  python.defs  qt.defs  rrsdk.defs  rrsdk_local.defs  sgxsdk.defs
bsp/mach-dm8168-tievm/: ChangeLog  Config  Make.conf  bspconfig  bspconfig.default
bsp/mach-dm8168-tievm/apps/: Makefile
bsp/mach-dm8168-tievm/u-boot/: Config  Makefile.rules
bsp/mach-dm8168-z3/: ConfigToolchain  Make.conf  bspconfig.default
bsp/mach-dm8168-z3/apps/: Makefile
bsp/mach-dm8168-z3/u-boot/: Config  Makefile.rules
bsp/oscheck/: host.required  local.tools.common  oscheck  pkg  shellcheck  ubuntu.common  ubuntu.tools
bsp/scripts/: build_apps_defs.sh  check_patches_consistency.sh  coreconfig  doxygenfilter.sh  fetcher.sh  find_ip_address.sh  find_section.pl  merge_patches.sh  metainfo  replacer.pl  rrfiles  show_updates.pl  stamp_build  update  upgrade_sdk.pl
bsp/scripts/copyright/: components.dtd  copyright_handling.sh  copyrights-links.xsl  copyrights-pico.xsl  copyrights-short.xsl  copyrights.xml  copyrights.xsl  copyrights_check.sh  libutil.xsl  soup.xsl  summary.xsl  table.xsl
bsp/testing/scripts/: gentestsuite.pl  testparser.pl
bsp/tools/: simrun
documentation/: doxygen.conf
fs/: Config  Makefile  arch  mach  myapps  proprietary_src  toolchain.cmake.in  toolchain.sim.cmake.in
fs/apps/: Makefile
fs/apps/DirectFB-1.4.9/: Config  Makefile  copyrights.xml  metainfo
fs/apps/OpenCV-2.1.0/: Config  Makefile  metainfo
fs/apps/alsa-lib-1.0.24/: Config  Makefile  copyrights.xml
fs/apps/alsa-utils-1.0.24.2/: Config  Makefile  copyrights.xml  metainfo
fs/apps/avahi-0.6.19/: Config  Makefile  avahi-daemon.init  copyrights.xml  metainfo
fs/apps/bash-4.2/: Config  Makefile  copyrights.xml
fs/apps/binutils-2.21/: Config  Makefile  copyrights.xml
fs/apps/busybox/: Config  Makefile  copyrights.xml
fs/apps/cairo-1.10.2/: Config  Makefile  copyrights.xml  metainfo
fs/apps/cppunit-1.12.1/: Config  Makefile  copyrights.xml
fs/apps/cups-1.5.0/: Config  Makefile  cupsd.init  metainfo
fs/apps/curl-7.21.3/: Config  Makefile  copyrights.xml  metainfo
fs/apps/dbus-1.4.20/: Config  Makefile  copyrights.xml  metainfo  system-local.conf
fs/apps/dbus-1.4.6/: Config  Makefile  dbus.init  metainfo
fs/apps/dbus-glib-0.92/: Config  Makefile  copyrights.xml  metainfo
fs/apps/dbus-python-1.0.0/: Config  Makefile  copyrights.xml  metainfo
fs/apps/dconf-0.7.5/: Config  Makefile  copyrights.xml  (+2 more)
fs/apps/gst-rr-rtsp-sink/src/src/: Makefile.am  gstrtspsink.h  rtspmediafactory.h
fs/fstargets/: Config  Makefile  mach
fs/host-apps/: Makefile
installer/: Config  Makefile
installer/u-boot-installer/: Config  Makefile  bspconfigparser.pl  u-boot-installer
kernel/: Config  Makefile
kernel/copyrights/: copyrights.xml
kernel/patches/: arch  lttng-integration.patch  mach  rrsdk_integration.patch  series
myapps/: Config  Makefile
myapps/cameraApp-client/: Config  Makefile
myapps/cameraApp-client/src/: Makefile.in  aclocal.m4  configure  configure.ac
myapps/cameraApp-client/src/src/: Makefile.am  Makefile.in  cameraApp-client.c
myapps/gst-rrparser/: Config  Makefile
myapps/gst-rrparser/src/src/: Makefile.am  Makefile.in  gstrrparser.c  gstrrparser.h
myapps/gst-rrparser/src/src/.deps/: libgstmyfilter_la-gstmyfilter.Plo
myapps/gst-vala/: Config  Makefile  metainfo
myapps/gst-vala/src/: Makefile.in  aclocal.m4  configure  configure.ac
myapps/gst-vala/src/src/: Makefile.am  Makefile.in  gstreamer.c  gstreamer.vala
myapps/hello/: Config  Makefile  hello.c
myapps/hello-libgstc/: Config  Makefile
myapps/hello-libgstc/src/: Makefile.in  aclocal.m4  configure  configure.ac
myapps/hello-libgstc/src/src/: Makefile.am  Makefile.in  hello-libgstc.c
myapps/hello-qt/: Config  Makefile
myapps/hello-vala/: Config  Makefile
myapps/hello-vala/src/: Makefile.in  configure  configure.ac
myapps/hello-vala/src/src/: Makefile.am  Makefile.in  hello.c  hello.vala
myapps/ridgerun-ui-demo/: Config  Makefile  ridgerun-ui-demo.init
myapps/rr-rtsp-server/: Config  Makefile  metainfo  rr-rtsp-server.init
proprietary/: Config  Makefile
proprietary/ezsdk-5_05_02_00/: Apps.defs  Config  Makefile  coprocessors.init.in  copyrights.xml
proprietary/gst-openmax-dm81xx/: Config  Makefile  copyrights.xml  metainfo
proprietary/libOMX-dm81xx/: Config  Makefile  copyrights.xml
toolchain/: Makefile
toolchain/arm-eabi-glibc-codesourcery/: Config  Config.fs  Make.defs  Makefile  copyrights.xml
(+783 files in other folders)
